# freya-cli

./: .gitignore  LICENCE  README.md  docker-compose.yml  packages.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  python-test.yml
freya_cli/: cli.py  composer.py  default_packages.py  package_manager.py
src/freya_cli/: __init__.py  cli.py  composer.py  default_packages.py  package_manager.py
tests/: composer.test.py  package_manager.test.py
