[project]
name = "freya-cli"
version = "0.1.2"
description = "CLI tool for Freya home automation system"
readme = "README.md"
authors = [
    { name = "Kliiyu", email = "kliiyu@example.com" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.7",
    "pyyaml>=6.0.2",
    "toml>=0.10.2",
]

[project.scripts]
freya = "freya_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
